--- a/lib/android/build.gradle
+++ b/lib/android/build.gradle
@@ -19,5 +19,6 @@ dependencies {
   implementation 'com.google.android.gms:play-services-base:16.1.0'
   implementation 'com.google.android.gms:play-services-maps:16.1.0'
   implementation 'com.google.maps.android:android-maps-utils:0.5'
-
+  //implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"  
+  implementation "com.android.support:appcompat-v7:28.0.0"
 }
